[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymbus"
version = "0.1.0"
description = "Python Meter-Bus codec."
authors = [
    { name = "Stanley Kudrow", email = "stankudrow@reply.no" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
keywords = ["meter-bus", "m-bus"]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
]

[tool.coverage.run]
branch = true
omit = ["tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 83
precision = 0
skip_covered = true
skip_empty = true
show_missing = true

[tool.coverage.html]
skip_empty = true
title = "Python Meter-Bus Coverage Report"

[tool.mypy]
files = [
    "./src/**/*.py",
    "./tests/**/*.py",
]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--maxfail=1",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=html",
    "--random-order"
]
xfail_strict = true
testpaths = ["tests"]
verbosity_test_cases = 3

[tool.ruff]
extend-exclude = ["assets"]
line-length = 80
respect-gitignore = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "FBT",  # flake8-boolean-trap
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PT",  # pytest-style
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "T",  # flake8-print-linter
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",  # pyupgrade
]
ignore = [
    "ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
    "ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
]
fixable = ["I", "ICN", "ISC"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*.py" = [
    "ANN201",  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/
    "FBT001"  # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
]
