[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymbus"
version = "0.3.0"
description = "Python Meter-Bus codec."
authors = [
    { name = "Stanley Kudrow", email = "stankudrow@reply.no" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy"
]
keywords = ["meter-bus", "m-bus", "meters"]
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-random-order>=1.1.1",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.7",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.coverage.run]
branch = true
omit = ["tests"]

[tool.coverage.paths]
source = ["src"]

[tool.coverage.report]
fail_under = 90
precision = 0
skip_covered = true
skip_empty = true
show_missing = true

[tool.coverage.html]
skip_empty = true
title = "Python Meter-Bus Coverage Report"

[tool.mypy]
files = [
    "./src/**/*.py",
    "./tests/**/*.py",
]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_defs = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "pytest"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.3"
addopts = [
    "--maxfail=1",
    "-s",
    "--strict-config",
    "--strict-markers",
    "--cov",
    "--cov-report=html",
    "--random-order"
]
xfail_strict = true
testpaths = ["tests"]
verbosity_test_cases = 3

[tool.ruff]
extend-exclude = ["assets"]
line-length = 80
respect-gitignore = true
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
    "A",  # flake8-builtins
    "ANN",  # flake8-annotations
    "ARG",  # flake8-unused-arguments
    "B",  # flake8-bugbear
    "BLE",  # flake8-blind-except
    "C4",  # flake8-comprehensions
    "C90",  # mccabe
    # "D",  # pydocstyle
    "DTZ",  # flake8-datetimez
    "E",  # pycodestyle (Error)
    "EM",  # flake8-errmsg
    "ERA",  # eradicate
    "F",  # Pyflakes
    "FBT",  # flake8-boolean-trap
    "I",  # isort
    "ICN",  # flake8-import-conventions
    "ISC",  # flake8-implicit-str-concat
    "N",  # pep8-naming (N)
    "PIE",  # flake8-pie
    "PT",  # pytest-style
    "PYI",  # flake8-pyi
    "Q",  # flake8-quotes
    "RSE",  # flake8-raise
    "RET",  # flake8-return
    "S",  # flake8-bandit
    "SLF",  # flake8-self
    "SIM",  # flake8-simplify
    "SLOT",  # flake8-slots
    "T",  # flake8-print-linter
    "T10",  # flake8-debugger
    "T20",  # flake8-print
    "TC",  # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "TRY",  # tryceratops
    "UP",  # pyupgrade
    "W",  # pycodestyle (Warning)
    "YTT",  # flake8-2020
]
ignore = [
    "ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
    "D105",  # https://docs.astral.sh/ruff/rules/undocumented-magic-method/
    "ISC001",  # https://docs.astral.sh/ruff/rules/single-line-implicit-string-concatenation/
]
fixable = ["I", "ICN", "ISC", "D202"]

[tool.ruff.lint.per-file-ignores]
"{src,tests}/*.py" = [
    "N817",  # https://docs.astral.sh/ruff/rules/camelcase-imported-as-acronym/
]
"src/pymbus/codes/vif.py" = ["ERA001"]
"tests/*.py" = [
    "ANN201",  # https://docs.astral.sh/ruff/rules/missing-return-type-undocumented-public-function/
    "D",
    "ERA",
    "FBT001",  # https://docs.astral.sh/ruff/rules/boolean-type-hint-positional-argument/
    "PT011",  # https://docs.astral.sh/ruff/rules/pytest-raises-too-broad/
    "S",
]
